# Computer-Graphics-skeleton-Linux

./: CMakeLists.txt  README.md
include/glad/: glad.h
src/: GreenTriangle.cpp  framework.cpp  framework.h
